fix up extra spacing at mobile res, incl. map image pushing it out

--- a/css/_sass/base.scss
+++ b/css/_sass/base.scss
@@ -129,6 +129,9 @@ body {
 .container {
   position: relative;
 }
+.stats .container {
+  position: static; // for map alignment outside of top
+}
 .cta, .introduction, .extra {
   .col {
     position: relative;
