--- a/css/_sass/stats.scss
+++ b/css/_sass/stats.scss
@@ -169,7 +169,7 @@ $stats-label-vadjust: 0.4;
     top: 0;
     right: 0;
     width: 100%;
-    height: 130%; // this block is unstyled/short right now
+    height: 700px;  // just give it enough height to cover most of stats
     z-index: 0;
     margin-top: -7em;
   }
@@ -186,6 +186,7 @@ $stats-label-vadjust: 0.4;
     }
     .australia-map {
       width: 80%;
+      height: 130%; // this block is unstyled/short right now
       position: absolute;
       margin-top: 0;
     }
